# bench

./: .gitignore  README.md  package.json  wrangler.jsonc
.github/workflows/: deploy.yml  eval-gate.yml
evals/: README.md  export_summary.py  promptfooconfig.yaml  pyproject.toml
evals/tasks/: benchoff.py
public/: frontier.html  index.html
public/data/: candidates.json  frontier.json  swe-pro.json
